// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`status > render animated 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  75%, 100% {
    -webkit-transform: scale(2);
    -moz-transform: scale(2);
    -ms-transform: scale(2);
    transform: scale(2);
    opacity: 0;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.emotion-0[data-notification='true'] {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.emotion-2 {
  position: absolute;
  width: 10px;
  height: 10px;
  opacity: 0.75;
  border-radius: 100%;
  -webkit-animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  background-color: #2c8564;
}

.emotion-4 {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #2c8564;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        class="emotion-2 emotion-3"
      />
      <span
        class="emotion-4 emotion-5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > render with className 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.emotion-0[data-notification='true'] {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.emotion-2 {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #2c8564;
}

<div
    data-testid="testing"
  >
    <span
      class="test emotion-0 emotion-1"
    >
      <span
        class="emotion-2 emotion-3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="danger" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.emotion-0[data-notification='true'] {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.emotion-2 {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #e51963;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        class="emotion-2 emotion-3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="info" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.emotion-0[data-notification='true'] {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.emotion-2 {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #0078d2;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        class="emotion-2 emotion-3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="neutral" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.emotion-0[data-notification='true'] {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.emotion-2 {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #151a2d;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        class="emotion-2 emotion-3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="success" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.emotion-0[data-notification='true'] {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.emotion-2 {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #2c8564;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        class="emotion-2 emotion-3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`status > renders correctly with type="warning" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.emotion-0[data-notification='true'] {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.emotion-2 {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #fbc600;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        class="emotion-2 emotion-3"
      />
    </span>
  </div>
</DocumentFragment>
`;
